--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/Edit.cshtml
@@ -1,6 +1,5 @@
 ﻿@model ReturnRequestModel
 @{
-    //page title
     ViewBag.Title = T("Admin.ReturnRequests.EditReturnRequestDetails").Text;
 }
 @using (Html.BeginForm())
@@ -10,7 +9,14 @@
             @T("Admin.ReturnRequests.EditReturnRequestDetails") @Html.ActionLink("(" + T("Admin.ReturnRequests.BackToList") + ")", "List")
         </div>
         <div class="options">
-            <button type="submit" name="notify-customer" value="notify-customer" class="btn"><i class="icon-envelope"></i>&nbsp;@T("Admin.ReturnRequests.NotifyCustomer")</button>
+			@if(Model.CanAccept)
+			{
+				<button type="button" name="accept" class="btn accept-return-request-button" data-toggle="modal" data-target="#CancelOrderItemModal">
+					<i class="icon-retweet"></i>&nbsp;@T("Admin.ReturnRequests.Accept")
+				</button>
+			}
+
+            <button type="submit" name="notify-customer" value="notify-customer" class="btn"><i class="icon-envelope"></i>&nbsp;@T("Admin.ReturnRequests.NotifyCustomer")</button>			
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
             <button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
             <button type="submit" name="returnrequest-delete" value="returnrequest-delete" id="returnrequest-delete" class="btn btn-danger"><i class="icon-trash icon-white"></i>&nbsp;@T("Admin.Common.Delete")</button>
@@ -19,3 +25,5 @@
     @Html.Partial("_CreateOrUpdate", Model)
 }
 @Html.DeleteConfirmation("returnrequest-delete")
+
+@Html.Partial("~/Administration/Views/Order/_CancelOrderItem.cshtml", Model.CancelOrderItem)
