--- a/src/Plugins/Feed.Froogle/Views/FeedFroogle/Configure.cshtml
+++ b/src/Plugins/Feed.Froogle/Views/FeedFroogle/Configure.cshtml
@@ -468,7 +468,23 @@
 				</td>
 				<td class="adminData">
 					@Html.EditorFor(m => m.SearchProductName)
-
+				</td>
+			</tr>
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(m => m.SearchIsTouched)
+				</td>
+				<td class="adminData">
+					@Html.DropDownList("SearchIsTouched", new List<SelectListItem> {
+						new SelectListItem { Text = Model.Helper.GetResource("Common.Unspecified"), Value = "" },
+						new SelectListItem { Text = Model.Helper.GetResource("Plugins.Feed.Froogle.SearchIsTouched.Touched"), Value = "touched" },
+						new SelectListItem { Text = Model.Helper.GetResource("Plugins.Feed.Froogle.SearchIsTouched.Untouched"), Value = "untouched" }
+					})
+				</td>
+			</tr>
+			<tr>
+				<td class="adminTitle">&nbsp;</td>
+				<td class="adminData">
 					<button type="submit" id="search-products" value="search-product" class="btn">
 						<i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")
 					</button>
@@ -480,9 +496,6 @@
 	</tr>
     <tr>
         <td>
-			@{
-                var gridPageSize = SmartStore.Core.Infrastructure.EngineContext.Current.Resolve<SmartStore.Core.Domain.Common.AdminAreaSettings>().GridPageSize;
-			}
             @(Html.Telerik().Grid<GoogleProductModel>()
 				.Name("froogleproducts-grid")
 				.DataKeys(keys => {
@@ -491,11 +504,13 @@
 				.Columns(c => {
 					c.Bound(x => x.ProductId).ReadOnly().Visible(false);
 					c.Bound(x => x.ProductName).ReadOnly().Visible(true).Width(440);
-					c.Bound(x => x.GoogleCategory).ClientTemplate(Html.XEditableLink("GoogleCategory", "typeahead"));
+					c.Bound(x => x.Taxonomy).ClientTemplate(Html.XEditableLink("Taxonomy", "typeahead"));
 					c.Bound(x => x.Gender).ClientTemplate(Html.XEditableLink("Gender", "select2")).Width(100);
 					c.Bound(x => x.AgeGroup).ClientTemplate(Html.XEditableLink("AgeGroup", "select2")).Width(100);
 					c.Bound(x => x.Color).ClientTemplate(Html.XEditableLink("Color", "text"));
-					c.Bound(x => x.GoogleSize).ClientTemplate(Html.XEditableLink("GoogleSize", "text"));
+					c.Bound(x => x.Size).ClientTemplate(Html.XEditableLink("Size", "text"));
+					c.Bound(x => x.Material).ClientTemplate(Html.XEditableLink("Material", "text"));
+					c.Bound(x => x.Pattern).ClientTemplate(Html.XEditableLink("Pattern", "text"));
 				})
 				.ClientEvents(e => {
 					e.OnDataBound("OnGridDataBound");
@@ -505,7 +520,7 @@
 					dataBinding.Ajax()
 						.Select("GoogleProductList", "FeedFroogle", new RouteValueDictionary() { { "Namespaces", "SmartStore.Plugin.Feed.Froogle.Controllers" }, { "area", "" } });
 				})
-				.Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
+				.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
 				.EnableCustomBinding(true)
 			)
         </td>
@@ -537,7 +552,8 @@
 
     	function OnGridDataBinding(e) {
     		e.data = {
-    			searchProductName: $('#SearchProductName').val()
+    			searchProductName: $('#SearchProductName').val(),
+				touched: $('#SearchIsTouched').val()
     		};
     	}
 
@@ -553,7 +569,7 @@
     				allowClear: true
     			};
 
-    		grid.find('a.edit-link-googlecategory').editable($.extend(options, {
+    		grid.find('a.edit-link-taxonomy').editable($.extend(options, {
     			source: @Html.Raw(Model.AvailableGoogleCategoriesAsJson)
     		}));
 
@@ -576,7 +592,11 @@
 
     		grid.find('a.edit-link-color').editable(options);
 
-    		grid.find('a.edit-link-googlesize').editable(options);
+    		grid.find('a.edit-link-size').editable(options);
+
+    		grid.find('a.edit-link-material').editable(options);
+
+    		grid.find('a.edit-link-pattern').editable(options);
 		}
     </script>
 }
