--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
@@ -24,9 +24,12 @@
 				</a>
 				<ul class="dropdown-menu">
 					<li><a href="@Url.Action("ExportXmlAll")">@T("Admin.Common.ExportToXml.All")</a></li>
-					<li><a href="javascript:void(0)" id="exportxml-selected">@T("Admin.Common.ExportToXml.Selected")</a></li>
 					<li><a href="@Url.Action("ExportExcelAll")">@T("Admin.Common.ExportToExcel.All")</a></li>
-					<li><a href="javascript:void(0)" id="exportexcel-selected">@T("Admin.Common.ExportToExcel.Selected")</a></li>
+					<li><a href="@Url.Action("ExportPdfAll")">@T("Admin.Common.ExportToPdf.All")</a></li>
+
+					<li><a href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportXmlSelected", "Order")">@T("Admin.Common.ExportToXml.Selected")</a></li>				
+					<li><a href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportExcelSelected", "Order")">@T("Admin.Common.ExportToExcel.Selected")</a></li>					
+					<li><a href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportPdfSelected", "Order")">@T("Admin.Common.ExportToPdf.Selected")</a></li>
 				</ul>
 			</div>
         </div>
@@ -208,23 +211,15 @@
                 return false;
             });
 
-
-            //"Export Excel selected" button
-            $('#exportexcel-selected').click(function (e) {
-                e.preventDefault();
-                //redirect to required URL
-                setLocation('@(Url.Action("ExportExcelSelected", "Order"))?selectedIds=' + selectedIds.join(","));
-                return false;
-            });
-
-            //"Export XML selected" button
-            $('#exportxml-selected').click(function (e) {
-                e.preventDefault();
-                //redirect to required URL
-                setLocation('@(Url.Action("ExportXmlSelected", "Order"))?selectedIds=' + selectedIds.join(","));
-                return false;
-            });
-
+			// export selected to pdf, xml, xls...
+        	$('a.export-form-post').click(function (e) {
+        		e.preventDefault();
+        		var form = $('#OrderExportForm');
+        		form.find('[name=selectedIds]').val(selectedIds.join(','));
+        		form.attr('action', $(this).attr('data-url'));
+        		form.submit();
+        		return false;
+        	});
             
             $('#mastercheckbox').click(function () {
                 $('.checkboxGroups').attr('checked', $(this).is(':checked')).change();
@@ -312,6 +307,9 @@
             var numChkBoxesChecked = $('#orders-grid input[type=checkbox][checked][id!=mastercheckbox]').length;
             $('#mastercheckbox').attr('checked', numChkBoxes == numChkBoxesChecked && numChkBoxes > 0);
         }
-   </script>
-    
+   </script>   
 }
+
+<form id="OrderExportForm" method="POST" action="#">
+	<input type="hidden" id="selectedIds" name="selectedIds" value="" />
+</form>
