--- a/src/Presentation/SmartStore.Web/Administration/Views/Poll/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Poll/_CreateOrUpdate.cshtml
@@ -6,6 +6,7 @@
 {
     x.Add().Text(T("Admin.ContentManagement.Polls.Info").Text).Content(TabInfo()).Selected(true);
     x.Add().Text(T("Admin.ContentManagement.Polls.Answers").Text).Content(TabAnswers());
+	x.Add().Text(T("Admin.Common.Stores").Text).Content(TabStores());
     
     //generate an event
     EngineContext.Current.Resolve<IEventPublisher>().Publish(new TabStripCreated(x, "poll-edit", this.Html, this.Model));
@@ -153,4 +154,49 @@
         {
     @T("Admin.ContentManagement.Polls.Answers.SaveBeforeEdit")
         }
+}
+
+@helper TabStores()
+{
+    <script type="text/javascript">
+    	$(document).ready(function () {
+
+    		$('#@Html.FieldIdFor(model => model.LimitedToStores)').change(function () {
+    			$('#pnl-available-stores').toggle($(this).is(':checked'));
+    		}).trigger('change');
+
+        });
+    </script>
+	
+    <table class="adminContent">
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.LimitedToStores)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.LimitedToStores)
+                @Html.ValidationMessageFor(model => model.LimitedToStores)
+            </td>
+        </tr>
+        <tr id="pnl-available-stores">
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.AvailableStores)
+            </td>
+            <td class="adminData">
+                @if (Model.AvailableStores != null && Model.AvailableStores.Count > 0)
+                {
+                    foreach (var store in Model.AvailableStores)
+                    {
+					<label class="checkbox">
+						<input type="checkbox" name="SelectedStoreIds" value="@store.Id" checked="@(Model.SelectedStoreIds != null && Model.SelectedStoreIds.Contains(store.Id))" />
+						<span>@store.Name</span>
+					</label>
+                    }
+                }
+                else
+                {
+                    <div>@T("Admin.Configuration.Stores.NoStoresDefined")</div>
+                }</td>
+        </tr>
+    </table>
 }
