--- a/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
@@ -1,9 +1,7 @@
 ﻿@model NewsLetterSubscriptionListModel
 @using Telerik.Web.Mvc.UI
 @{
-    var gridPageSize = EngineContext.Current.Resolve<SmartStore.Core.Domain.Common.AdminAreaSettings>().GridPageSize;
-    
-    //page title
+  
     ViewBag.Title = T("Admin.Promotions.newsLetterSubscriptions").Text;
 }
 <div class="section-header">
@@ -20,7 +18,8 @@
 		</a>
     </div>
 </div>
-<table width="100%">
+
+<table class="adminContent">
     <tr>
         <td class="adminTitle">
             @Html.SmartLabelFor(model => model.SearchEmail)
@@ -30,17 +29,27 @@
         </td>
     </tr>
     <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.StoreId)
+        </td>
+        <td class="adminData">
+            @Html.DropDownList("StoreId", Model.AvailableStores)
+        </td>
+    </tr>
+    <tr>
 		<td class="adminTitle">
 			&nbsp;
 		</td>
 		<td class="adminData">
             <button type="submit" id="search-newsLetterSubscriptions" value="search-newsLetterSubscriptions"
-                class="btn"><i class="icon-search icon-white"></i>&nbsp;@T("Admin.Common.Search")</button>
+                class="btn"><i class="icon-search icon-white"></i>&nbsp;@T("Admin.Common.Search")
+			</button>
         </td>
     </tr>
 </table>
-<p>
-</p>
+
+<p></p>
+
 <table class="adminContent">
     <tr>
         <td>
@@ -53,11 +62,14 @@
                         .Columns(columns =>
                         {
                             columns.Bound(x => x.Email)
-                                .Width(300);
+                                .Width(500);
                             columns.Bound(x => x.Active)
                                 .Template(item => @Html.SymbolForBool(item.Active))
                                 .ClientTemplate(@Html.SymbolForBool("Active"))
+								.Centered()
                                 .Width(100);
+							columns.Bound(x => x.StoreName)
+								.ReadOnly();
                             columns.Bound(x => x.CreatedOn)
                                 .ReadOnly()
                                 .Width(150);
@@ -68,7 +80,7 @@
                             }).Width(180);
 
                         })
-                        .Pageable(settings => settings.Total(Model.NewsLetterSubscriptions.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
+                        .Pageable(settings => settings.Total(Model.NewsLetterSubscriptions.Total).PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
                         .DataBinding(dataBinding => dataBinding.Ajax()
                             .Select("SubscriptionList", "NewsLetterSubscription")
                             .Update("SubscriptionUpdate", "NewsLetterSubscription")
@@ -79,6 +91,7 @@
         </td>
     </tr>
 </table>
+
 <script type="text/javascript">
     $(document).ready(function () {
         $('#search-newsLetterSubscriptions').click(function () {
@@ -91,7 +104,8 @@
 
     function onDataBinding(e) {
         var searchModel = {
-            SearchEmail: $('#@Html.FieldIdFor(model => model.SearchEmail)').val()
+        	SearchEmail: $('#@Html.FieldIdFor(model => model.SearchEmail)').val(),
+        	StoreId: $('#@Html.FieldIdFor(model => model.StoreId)').val(),
         };
         e.data = searchModel;
     }
@@ -101,6 +115,7 @@
         e.preventDefault();
     }
 </script>
+
 @*import emails form*@
 @{Html.SmartStore().Window()
         .Name("importcsv-window")
@@ -121,6 +136,7 @@
         .Visible(false)
         .Render();
 }
+
 <script type="text/javascript">
     $(document).ready(function () {
         $("#importcsv").click(function (e) {
