--- a/src/Presentation/SmartStore.Web/Administration/Views/Campaign/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Campaign/List.cshtml
@@ -1,7 +1,6 @@
 ﻿@model Telerik.Web.Mvc.GridModel<CampaignModel>
 @using Telerik.Web.Mvc.UI
 @{
-    //page title
     ViewBag.Title = T("Admin.Promotions.Campaigns").Text;
 }
 <div class="section-header">
@@ -10,7 +9,9 @@
         @T("Admin.Promotions.Campaigns")
     </div>
     <div class="options">
-        <a href="@Url.Action("Create")" class="btn btn-primary"><i class="icon-plus icon-white"></i>&nbsp;@T("Admin.Common.AddNew")</a>
+        <a href="@Url.Action("Create")" class="btn btn-primary">
+			<i class="icon-plus icon-white"></i>&nbsp;@T("Admin.Common.AddNew")
+		</a>
     </div>
 </div>
 <table class="adminContent">
@@ -21,17 +22,17 @@
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.Name)
-                            .Width(400)
+                            .Width(500)
                             .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
                             .ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Name #></a>");
+						columns.Bound(x => x.Subject);
+						columns.Bound(x => x.LimitedToStores)
+							.Width(180)
+							.Template(item => @Html.SymbolForBool(item.LimitedToStores))
+							.ClientTemplate(@Html.SymbolForBool("LimitedToStores"))
+							.Centered();
                         columns.Bound(x => x.CreatedOn)
-                            .Width(100);
-                        columns.Bound(x => x.Id)
-                            .Width(50)
-                            .Centered()
-                            .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
-                            .Title(T("Admin.Common.Edit").Text);
+                            .Width(180);
                     })
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Campaign"))
                     .EnableCustomBinding(true))
