#447 HTML text collapser: Make it usable for all long texts

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -175,7 +175,6 @@
             </td>
         </tr>
 
-        @*codehint: sm-add begin*@
         <tr id="pnlDisplayWeight">
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.ShowWeight)
@@ -265,6 +264,24 @@
             <td class="adminData">
                 @Html.SettingEditorFor(model => model.NumberOfBestsellersOnHomepage)
                 @Html.ValidationMessageFor(model => model.NumberOfBestsellersOnHomepage)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.EnableHtmlTextCollapser)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.EnableHtmlTextCollapser)
+                @Html.ValidationMessageFor(model => model.EnableHtmlTextCollapser)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.HtmlTextCollapsedHeight)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.HtmlTextCollapsedHeight)
+                @Html.ValidationMessageFor(model => model.HtmlTextCollapsedHeight)
             </td>
         </tr>
     </table>
