--- a/src/Presentation/SmartStore.Web/Content/theme.common.less
+++ b/src/Presentation/SmartStore.Web/Content/theme.common.less
@@ -884,6 +884,14 @@ fieldset > legend {
     font-size: .85em;
 }
 
+.mini-button-icon {
+	font-size: 10px;
+	padding-right: 5px;
+}
+p.continued {
+	margin-bottom: 2px;
+}
+
 
 
 /* PRODUCT BUNDLE ITEMS */
