--- a/src/Presentation/SmartStore.Web/Views/Topic/TopicWidget.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Topic/TopicWidget.cshtml
@@ -12,6 +12,6 @@
         </div>
     }
     <div class="block-body">
-        @Html.Raw(Model.Html)
+        @Html.Raw(Html.CollapsedText(Model.Html))
     </div>
 </div>
