--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
@@ -101,7 +101,7 @@
 					</div>
 				}
                 <div class="full-description">
-                    @Html.Raw(Model.FullDescription)
+                    @Html.Raw(Html.CollapsedText(Model.FullDescription))
                 </div>
             </div>
             <div class="product-collateral">
