--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.cshtml
@@ -312,7 +312,7 @@
                     if (!String.IsNullOrWhiteSpace(Model.FullDescription))
                     {
                         x.Add().Text(@T("Products.Details"))
-                                .Content(Html.Raw("<div class='more-less'><div class='more-block' itemprop='description'>" + Model.FullDescription + "</div></div>").ToString())
+								.Content(Html.Raw("<div itemprop='description'>" + Html.CollapsedText(Model.FullDescription) + "</div>").ToString())
                                 .Selected(true);
                     }
 
@@ -330,7 +330,7 @@
                                 .Badge(Model.ReviewCount.ToString(), BadgeStyle.Info, Model.ReviewCount > 0)
                                 .Selected(String.IsNullOrWhiteSpace(Model.FullDescription) && String.IsNullOrWhiteSpace(specificationAttributes));
                     }
-                    
+
                     //generate an event
                     EngineContext.Current.Resolve<IEventPublisher>().Publish(new TabStripCreated(x, "product-detail", this.Html, this.Model));
                 })
@@ -366,14 +366,6 @@
             zoomType: '@Model.DetailsPictureModel.PictureZoomType' // window, inner, lens
         };
 
-        $('#product-details-form').productDetail(settings);
-
-        if( toBool('@(Model.EnableHtmlTextCollapser)') )
-        {
-            var moreLess = $('.more-less');
-            if (moreLess.height() > parseInt(@(Model.HtmlTextCollapsedHeight))) {
-                $('.more-less').moreLess({ adjustheight: parseInt(@(Model.HtmlTextCollapsedHeight)) });
-            }
-        }
+    	$('#product-details-form').productDetail(settings);
     });
 </script>
