--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
@@ -7,7 +7,10 @@
     Html.AppendScriptParts(ResourceLocation.Head,
         "~/Scripts/jquery-{version}.js",
         "~/Scripts/jquery.validate.js",
-        "~/Scripts/jquery.validate.unobtrusive.js"); 
+        "~/Scripts/jquery.validate.unobtrusive.js");
+		
+	Html.AppendScriptParts(ResourceLocation.Foot,
+		"~/Scripts/smartstore.jquery.utils.js");
 }
 
 <!DOCTYPE html>
@@ -39,5 +42,12 @@
     @RenderBody()
     @Html.SmartCssFiles(this.Url, ResourceLocation.Foot)
     @Html.SmartScripts(this.Url, ResourceLocation.Foot)
+
+	<script type="text/javascript">
+	$(function () {
+		// html text collapser
+		$('.more-less').moreLess();
+    });
+    </script>
 </body>
 </html>
