--- a/src/Presentation/SmartStore.Web/Administration/Views/Common/SystemInfo.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Common/SystemInfo.cshtml
@@ -32,6 +32,14 @@
     </tr>
     <tr>
         <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.AppDate)
+        </td>
+        <td class="adminData">
+            @Model.AppDate.ToString("F")
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
             @Html.SmartLabelFor(model => model.OperatingSystem)
         </td>
         <td class="adminData">
@@ -88,10 +96,18 @@
     </tr>
     <tr>
         <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.DataProviderFriendlyName)
+        </td>
+        <td class="adminData">
+			@Model.DataProviderFriendlyName.NaIfEmpty()
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
             @Html.SmartLabelFor(model => model.DatabaseSize)
         </td>
         <td class="adminData">
-			@("{0:0.00}".FormatWith(Model.DatabaseSize)) MB
+			@Model.DatabaseSizeString.NaIfEmpty()
         </td>
     </tr>
     <tr>
