IsRequired defaults to true while creating a new product attribute

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -387,7 +387,7 @@ td.adminData > input[type="checkbox"] {
 }
 .t-numerictextbox .t-formatted-value {
 	position: absolute;
-    padding: 4px 0;
+    padding: 4px 4px;
 	left: 6px;
 	right: 16px;
 	overflow: hidden;
