--- a/src/Presentation/SmartStore.Web/Content/fonts/fontastic.less
+++ b/src/Presentation/SmartStore.Web/Content/fonts/fontastic.less
@@ -15,7 +15,7 @@
 	content: attr(data-icon);
 	speak: none;
 	font-weight: normal;
-	-webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: auto;
 }
 
 /* Use the following CSS code if you want to have a class per icon */
