--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -66,7 +66,8 @@
 
 .fa {
 	// prevent Chrome ugliness on fonts
-	-webkit-text-stroke: 0.25px;
+	//-webkit-text-stroke: 0.25px;
+	-webkit-font-smoothing: auto;
 }
 
 .btn-small .fa {
