--- a/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
+++ b/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
@@ -16,7 +16,7 @@
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid(Model.Records)
+            @(Html.Telerik().Grid<ShippingByTotalModel>()
                     .Name("shipping-bytotal-grid")
                     .DataKeys(keys => keys.Add(x => x.Id).RouteKey("Id"))
                     .DataBinding(dataBinding => dataBinding
@@ -48,6 +48,7 @@
                             commands.Delete().Localize(T);
                         }).Width(190);
                     })
+					.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
                     .Editable(x => x.Mode(GridEditMode.InLine))
                     .EnableCustomBinding(true))
         </td>
@@ -73,7 +74,7 @@
                         $.each(data, function(id, option) {
                             ddlStates.append($('<option></option>').val(option.id).html(option.name));
                         });
-                        ddlStates.trigger("change"); // codehint: sm-add
+                        ddlStates.trigger("change");
                     },
                     error:function (xhr, ajaxOptions, thrownError){
                         alert('Failed to retrieve states.')
@@ -265,12 +266,11 @@
                 </tr>
             </table>  
         </text>)
-        .FooterContent(
-        @<text>
-            <button id="addshippingbytotalrecord" type="button" class="btn">
-                @T("Common.AddNew")
-            </button> 
-            <button type="button" class="btn btn-link" data-dismiss="modal">@T("Admin.Common.Cancel")</button>       
+        .FooterContent(@<text>
+            <button id="addshippingbytotalrecord" type="button" class="btn btn-primary">
+				<i class="icon-ok"></i>&nbsp;@T("Common.AddNew")
+			</button>
+            <button type="button" class="btn" data-dismiss="modal">@T("Admin.Common.Cancel")</button>
         </text>)
         .Modal(true)
         .Visible(false)
@@ -310,14 +310,14 @@
                 </td>
             </tr>
             <tr>
-			<td class="adminTitle">
-				&nbsp;
-			</td>
-			<td class="adminData">
-                    <button type="button" id="savegeneralsettings" class="btn btn-primary">
-                        <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
-                    </button>
-                </td>
+				<td class="adminTitle">
+					&nbsp;
+				</td>
+				<td class="adminData">
+					<button type="button" id="savegeneralsettings" class="btn btn-primary">
+						<i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
+					</button>
+				</td>
             </tr>
         </table>
     </fieldset>
