--- a/src/Presentation/SmartStore.Web/Views/Common/HeaderLinks.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/HeaderLinks.Mobile.cshtml
@@ -15,6 +15,8 @@
         }
     </ul>
 </div>
+@if (Model.ShoppingCartEnabled == true || Model.WishlistEnabled == true)
+{
 <div data-role="navbar">
     <ul>
         @if (Model.ShoppingCartEnabled)
@@ -29,4 +31,5 @@
         }
     </ul>
 </div>
+}
 @Html.Widget("mobile_header_links_after")
